--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,8 @@ CurrentScalingGridSize=4
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -184,7 +185,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -1967,6 +1968,8 @@ SkyAtmosphere.Replication=True
 SkyAtmosphere.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk.study_desk;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Small_Concrete_Planter_Pack_vddifj2iw/S_Small_Concrete_Planter_Pack_vddifj2iw_lod0_Var1.S_Small_Concrete_Planter_Pack_vddifj2iw_lod0_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Plants/Bigleaf_Hydrangea_vgztealha/S_Bigleaf_Hydrangea_vgztealha_Var13_lod0.S_Bigleaf_Hydrangea_vgztealha_Var13_lod0;
@@ -1985,8 +1988,6 @@ RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_gl
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_windows.daybed_windows;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat.bulb_base_mat;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp.floorlamp;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2079,26 +2080,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem1=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem2=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem3=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
-MRUItem12=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
-MRUItem13=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
-MRUItem16=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem17=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem18=/Game/StarterContent/Maps/StarterMap
-MRUItem19=/Game/OurProject/Maps/CabinInWoods
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem2=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
+MRUItem3=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
+MRUItem4=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
+MRUItem5=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
+MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
+MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
+MRUItem18=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem19=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
