--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,6 +136,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -172,7 +173,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -1969,6 +1970,7 @@ SkyAtmosphere.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk2.study_desk2;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk.study_desk;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Small_Concrete_Planter_Pack_vddifj2iw/S_Small_Concrete_Planter_Pack_vddifj2iw_lod0_Var1.S_Small_Concrete_Planter_Pack_vddifj2iw_lod0_Var1;
@@ -1987,11 +1989,11 @@ RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_wi
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_windows.daybed_windows;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat.bulb_glass_mat;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
@@ -2150,6 +2152,7 @@ MRUItem19=/Game/FirstPerson/Maps/FirstPersonMap
 /Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K.MI_Wooden_Floor_wdipfjw_4K=1
 /Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K.MI_Wooden_Planks_ueynbafew_4K=1
 /Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP.MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP=1
+/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
