--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -137,6 +137,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -173,7 +174,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+Object="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -1967,8 +1968,13 @@ SkyAtmosphere.Activation=True
 SkyAtmosphere.Cooking=True
 SkyAtmosphere.Replication=True
 SkyAtmosphere.Actor=True
+MaterialMergeOptions.OutputMaterialSettings=True
+MaterialOptions.MeshSettings=True
+MaterialOptions.MaterialBakeSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat.closed_book_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book.closed_book;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk2.study_desk2;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk.study_desk;
@@ -1987,8 +1993,6 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdi
 RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_windows.daybed_windows;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat.floorlamp_base_mat;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2082,26 +2086,26 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
-MRUItem2=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem3=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem4=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem5=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
-MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
-MRUItem14=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
-MRUItem15=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
-MRUItem18=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem19=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem4=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
+MRUItem5=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
+MRUItem6=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
+MRUItem7=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
+MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/NewMaterial
+MRUItem16=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/throwrug_mat
+MRUItem17=/Game/OurProject/Maps/Forest_Scene/Assets/Bedroom/daybed_mat
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_drawer
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2272,6 +2276,7 @@ FbxImportUI.Miscellaneous=False
 FoliageType_InstancedStaticMesh.Painting=True
 PreviewMaterial.Material=False
 SpotLight.Light=False
+StaticMeshActor.Materials=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
