--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,10 +134,11 @@ CurrentScalingGridSize=4
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -154,7 +155,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 [RootWindow]
 ScreenPosition=X=339.000 Y=127.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -329,6 +330,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light=
+StaticMeshComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
@@ -1274,7 +1276,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Megascans/3D_Assets/Small_Concrete_Planter_Pack_vddifj2iw
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/books
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1971,9 +1973,22 @@ SkyAtmosphere.Actor=True
 MaterialMergeOptions.OutputMaterialSettings=True
 MaterialOptions.MeshSettings=True
 MaterialOptions.MaterialBakeSettings=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat.closed_book_mat;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red;
+RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book.closed_book;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk2.study_desk2;
@@ -1992,12 +2007,10 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K.MI_Wooden_Floor_wdipfjw_4K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame.daybed_window_frame;
-RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat.window_glass_mat;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
@@ -2157,6 +2170,9 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/material
 /Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K.MI_Wooden_Planks_ueynbafew_4K=1
 /Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP.MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP=1
 /Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat.study_desk_mat=1
+/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green=1
+/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
