--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,10 +131,12 @@ GridEnabled=False
 CurrentScalingGridSize=4
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB.M_M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -184,7 +186,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -2288,7 +2290,7 @@ bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2420,26 +2422,26 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFil
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Growth,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
-MRUItem9=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem10=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem11=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem12=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem0=/Game/LevelPrototyping/Meshes/M_SM_Cube_NewMaterial_38FB1D8244DA5DA4F0B722940A4268AD
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/M_study_desk2_study_desk_mat_932C8A2249F983D66F4F3ABA785FA4BB
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem11=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
+MRUItem12=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
+MRUItem13=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
+MRUItem14=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2611,7 +2613,7 @@ FbxImportUI.Material=False
 FbxImportUI.Mesh=False
 FbxImportUI.Miscellaneous=False
 FoliageType_InstancedStaticMesh.Painting=True
-PreviewMaterial.Material=False
+PreviewMaterial.Material=True
 SpotLight.Light=False
 StaticMeshActor.Materials=True
 
