--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -23,6 +23,7 @@ PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 bPreviewFeatureLevelWasDefault=True
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -184,7 +185,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -2421,25 +2422,25 @@ FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Colli
 
 [ContentBrowserRecent]
 MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
-MRUItem9=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
-MRUItem10=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
-MRUItem11=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
-MRUItem12=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_filament_mat
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_base_mat
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coffee_table_top_mat
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/grass/landcape_Inst
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/study_desk/study_desk_mat
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial
+MRUItem12=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP
+MRUItem13=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K
+MRUItem14=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K
+MRUItem15=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/architecture/daybed_window_frame
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/architecture/window_glass_mat
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/floorlamp_base_mat
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/floor_lamp/bulb_glass_mat
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2494,6 +2495,8 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/coffee_table/resources/coff
 /Game/OurProject/Maps/bedroom_scene/assets/architecture/floor/NewMaterial.NewMaterial=1
 /Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green=1
 /Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red=1
+/Game/OurProject/Maps/Forest_Scene/Assets/grass/landcape_Inst.landcape_Inst=1
+/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner.Forest_ProceduralFoliageSpawner=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -2614,6 +2617,7 @@ FoliageType_InstancedStaticMesh.Painting=True
 PreviewMaterial.Material=False
 SpotLight.Light=False
 StaticMeshActor.Materials=True
+FoliageType_InstancedStaticMesh.Placement=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
