--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1321,7 +1321,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/books
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/flowers
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -1339,7 +1339,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/grass
+ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/flowers
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2261,6 +2261,7 @@ ProceduralFoliageVolume.Replication=True
 ProceduralFoliageVolume.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/flowers/Grass.Grass;
 RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner.NewProceduralFoliageSpawner;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red.closed_book_mat_red;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green.closed_book_mat_green;
@@ -2280,7 +2281,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP.MI_Wooden_Planks_ueynbafew_4K_Inst_Roof_TEMP;
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Planks_ueynbafew/MI_Wooden_Planks_ueynbafew_4K.MI_Wooden_Planks_ueynbafew_4K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Floor_wdipfjw/MI_Wooden_Floor_wdipfjw_4K.MI_Wooden_Floor_wdipfjw_4K;
-RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2421,13 +2421,13 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFil
 FoliageType_InstancedStaticMesh=FoliageType_InstancedStaticMesh.Procedural.Collision,FoliageType_InstancedStaticMesh.Procedural.Clustering,FoliageType_InstancedStaticMesh.Procedural.Growth,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
-MRUItem2=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem3=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
-MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner
-MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/grass/landcape_Inst
-MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/grass/Grass_Material_Inst
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/OurProject/Maps/Forest_Scene/Assets/NewInstancedStaticMeshFoliage
+MRUItem5=/Game/OurProject/Maps/Forest_Scene/Assets/Forest_ProceduralFoliageSpawner
+MRUItem6=/Game/OurProject/Maps/Forest_Scene/Assets/grass/landcape_Inst
 MRUItem7=/Game/OurProject/Maps/Forest_Scene/Assets/NewProceduralFoliageSpawner
 MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
 MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat
