--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ CurrentScalingGridSize=4
 LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -378,7 +378,7 @@ ProceduralFoliageSpawner="\"Object\" \"Object.ProceduralFoliageSimulation.Foliag
 ProceduralFoliageVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [Directories2]
-UNR=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
+UNR=D:/Unreal Projects/Serious_Games/Serious_Games/Content/OurProject/Maps/Forest_Scene
 BRUSH=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBX=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
 FBXAnim=../../../../../../Users/ngdiy/Documents/GitHub/Serious_Games/Serious_Games/Content/
@@ -1339,7 +1339,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/flowers
+ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
